k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vet-backend-service
spec:
  selector:
    app: vet-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
