k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vet-ingress
spec:
  rules:
  - host: vet.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vet-backend-service 
            port:
              number: 80  # Порт, на который направляется трафик
